# rustegex

./: Cargo.toml  README.md
.github/actions/cache_cargo/: action.yml
.github/workflows/: bench.yml  ci.yml
benches/: benchmark.rs
src/: automaton.rs  charclass.rs  derivative.rs  dfa.rs  error.rs  lexer.rs  lib.rs  parser.rs  vm.rs
src/automaton/: dfa.rs  label.rs  nfa.rs
src/vm/: cache.rs  compile.rs  eval.rs  instruction.rs
