[package]
name = "rustegex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.3"
bit-set = "0.11.0"
foldhash = "0.2.0"
memchr = "2.8.2"
mimalloc = "0.1.48"

[dev-dependencies]
criterion = "0.8.0"
regex = "1.12.4"

[[bench]]
name = "benchmark"
harness = false
